--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <p>
         I am 18 years old from Brgy. Luzviminda II, Dasmariñas,Cavite.I <br>love drawing, listening to music, doing make up and watching movies
         <br>I may be a slow learner, but I always try my best to learn.I enjoy<br> being around cats and dogs, and I love eating donuts I don’t like <br>
-        people who watch videos on their phones with the volume turned up <br>loud A fun fact about me is that I always fall asleep in the jeep.
+        people who watch videos on their phones with the volume turned up <br>loud A. fun fact about me is that I always fall asleep in the jeep.
             </p>
         </font>
     </center>
